Actualizacion de pagina web

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -255,7 +255,7 @@ textarea{
 	align-content:center ;
 	justify-content: center;
 	justify-items: center;
-	background: black;
+	background: linear-gradient(to right, pink, lightblue);
 	text-align: center;
    }
 
@@ -291,5 +291,5 @@ textarea{
 	margin: auto;
 	background: black;
 }
-  
+
 /* fin de main */
